Fix button that change size of grid. Now is working hover effect and the grid is resizing correctly.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
 </head>
 <body>
 
-    <div class="title">
+    <div id="title">
 
         Etch-A-Sketch
+
+    </div>
+
+    <div id="option">
 
     </div>
 
